Change vertical alignment of emoji in topics, fixes #1480

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1655,6 +1655,10 @@ part/quit messages where we don't load previews (adds a blank line otherwise) */
 	line-height: 1;
 }
 
+.topic .emoji {
+	vertical-align: middle;
+}
+
 .textcomplete-item .emoji {
 	width: 32px;
 	text-align: center;
